tests/pp-fail/bad_undef.fl.0.exp
Error: bad_undef.fl(1,8): 'Nonexistent' is not defined 
\undef Nonexistent
       ^           
